# ask_youtube

./: .gitignore  README.md  gemini.md
backend/: .dockerignore  .gitignore  Dockerfile  compose.yaml  gemini.md  langgraph.json  pyproject.toml  requirements.txt  test_chat_flow.py  todo.md
backend/src/: main.py
backend/src/agents/: chat_agent.py  prompts.py
backend/src/agents/chat/: graph.py  nodes.py  state.py
backend/src/api/: chat.py  deps.py  main.py  schemas.py
backend/src/common/: services.py  youtube_tools.py
backend/src/core/: config.py  database.py  logging.py  models.py
backend/src/crud/: message.py  thread.py  video.py
backend/src/services/: youtube_service.py  youtube_tools.py
backend/tests/: test_youtube_tools.py
frontend/: gemini.md  next.config.ts  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/chat/: route.ts
frontend/app/chat/: layout.tsx  page.tsx
frontend/app/chat/[threadId]/: page.tsx
frontend/components/: component-example.tsx
frontend/components/chat/: ChatContainer.tsx  ChatHeader.tsx  ChatInput.tsx  ChatMessages.tsx  MessageBubble.tsx  TypingIndicator.tsx  VideoUrlPrompt.tsx
frontend/components/providers/: ChatProvider.tsx
frontend/components/sidebar/: NewChatButton.tsx  Sidebar.tsx  ThreadItem.tsx  ThreadList.tsx
frontend/components/ui/: combobox.tsx  dropdown-menu.tsx  field.tsx  select.tsx  sheet.tsx
frontend/components/video/: VideoCard.tsx  VideoSummary.tsx
frontend/lib/: config.ts  errors.ts  types.ts
frontend/lib/api/: client.ts  streamHandler.ts
(+3 files in other folders)
